# pipub

./: .gitignore  Pipfile  README.rst  pyproject.toml  setup.py
pipub/: __init__.py  __main__.py  pep508.py  projects.py
tests/: test_pep508.py
